few more changes

--- a/sourcemap.yml.sample
+++ b/sourcemap.yml.sample
@@ -1,4 +1,4 @@
-domain: "http://domain_name/tmp/assets"
+domain: "http://domain_name/tmp"  # without trailing slash
 sync_to_s3: "yes"
 privateassets_bucket_name : "devassets-housing"
 mapping_directory: "public/tmp" # public url
@@ -7,4 +7,4 @@ original_directory: "public/tmp" # public url
 
 # for private url
 # mapping_directory: "private" # private url
-# domain: "http://domain_name/private/assets"
+# domain: "http://domain_name/private"
