--- a/sourcemap.yml.sample
+++ b/sourcemap.yml.sample
@@ -1,10 +1,13 @@
-domain: "http://domain_name/tmp"  # without trailing slash
 sync_to_s3: "yes"
 privateassets_bucket_name : "devassets-housing"
-mapping_directory: "public/tmp" # public url
-original_directory: "public/tmp" # public url
 
+#for public repo
+# domain: "https://assets-sources.housingcdn.com/tmp" # without trailing slash
+# mapping_directory: "public/tmp" # public path
+# original_directory: "public/tmp" # public path
 
-# for private url
-# mapping_directory: "private" # private url
-# domain: "http://domain_name/private"
+#for private repo
+domain: "https://assets-sources.housingcdn.com/private" # without trailing slash
+mapping_directory: "private" # private path
+original_directory: "private" # private path
+
